<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#FF0000"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/register"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/welcome"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:id="@+id/surname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:layout_below="@+id/name"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/surname"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="phone" />
    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phone"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="text" />
    <Spinner
        android:id="@+id/role"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:onClick="onClickReg"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/role"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:text="@string/register" />


</RelativeLayout>